# genAI-kata-sdlc

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  original-source.md  pyproject.toml  run.py
.osgrep/: server.json
app/: main.py
app/core/: config.py  security.py  (+2 more)
migrations/: 001_create_users_table.sql  002_add_login_features.sql  002_create_products_table.sql  003_add_user_profile_columns.sql  003_update_product_listing_features.sql  004_create_user_addresses_table.sql  004_product_availability_management.sql  005_create_user_payment_methods_table.sql  005_pricing_management.sql  006_add_user_role_column.sql  007_create_farmers_table.sql  008_create_farm_images_table.sql  009_create_farm_videos_table.sql  010_create_farmer_bank_accounts_table.sql  011_create_shopping_cart_tables.sql
scripts/: seed_admin.sql  seed_products.py  seed_products.sql
tests/: conftest.py  test_auth_service.py  test_product_archive_delete.py  test_product_availability.py  test_product_update.py  test_security.py  test_user_models.py
user_stories/: US-001-user-registration.json  US-002-user-login.json  US-003-user-profile-management.json  US-004-farmer-registration.json  US-005-farmer-profile-setup.json  US-006-add-product-listing.json  US-007-update-product-listing.json  US-008-remove-product-listing.json  US-009-availability-management.json  US-010-pricing-management.json  US-011-product-browsing.json  US-012-product-search-filter.json  US-013-shopping-cart.json  US-014-checkout-process.json  US-015-reviews-ratings.json  US-016-detailed-product-descriptions.json  index.json
(+74 files in other folders)
